Fix layout issues with asciinema player (#1412)
* Fix issues in asciicinema/lightbox

- memo to prevent unneeded rendering
- constrain lightbox contents to viewport

* Remove extraneous preact chars

* add changelog

* Improve tool input / output appearance when rendered in vscode

---------

--- a/src/inspect_ai/_view/www/src/samples/chat/tools/ToolOutput.module.css
+++ b/src/inspect_ai/_view/www/src/samples/chat/tools/ToolOutput.module.css
@@ -8,7 +8,7 @@
 }
 
 .textOutput {
-  margin-left: 2px;
+  padding-left: 2px;
   padding: 0.5em 0.5em 0.5em 0.5em;
   white-space: pre-wrap;
   margin-bottom: 0;
